<resources>
    <string name="app_name">Belmondo</string>


    <string name="login_title">Login</string>
    <string name="register_title"><u>Registration</u></string>
    <string name="register_with_facebook">Register with Facebook</string>
    <string name="login_with_facebook_title">Login with Facebook</string>
    <string name="tap_twice_to_exit">Press back two times to exit</string>
    <string name="facebook_app_id">1353580211335635</string>
    <string name="facebook_login_cancel_title">Facebook login cancelled</string>
    <string name="facebook_login_error_title">Facebook login error</string>
    <string name="logout_facebook">Logout</string>
    <string name="logged_in">Logged in</string>
    <string name="login_failed">Login failed</string>
    <string name="login_error_title">Login failed</string>
    <string name="positive_button_text">OK</string>
    <string name="login_cancelled">Login cancelled</string>
    <string name="login_offline_button_text">Login offline</string>

    <string name="profile_name_length_validation">Profile name must be between 3 and 20 chars.</string>
    <string name="profile_name_title">Profile name</string>
    <string name="enter_profile">Enter</string>
    <string name="empty_field">Field can\'t be empty!</string>
    <string name="first_time_login_title">Login for the first time</string>
    <string name="your_profile_title">Create Profile</string>

    <string name="fill_form">Please fill information</string>
    <string name="weight">Weight [kg]</string>
    <string name="height">Height [cm]</string>
    <string name="pick_date">Pick birthdate</string>

    <string name="apply_text">Apply</string>

    <string name="at_least_chars">This field must have at least %1$d chars!</string>
    <string name="max_chars">This field must have maximum %1$d chars!</string>

    <string name="must_be_greater">The value must be greater than %1$d!</string>
    <string name="must_be_less">The value must be less than %1$d!</string>
    <string name="future_date">The date must be from past!</string>
    <string name="date_format">dd/MM/yyyy</string>
    <string name="bad_date_format">Given data is in bad format. It must be %1$s!</string>
    <string name="date_must_be_before_now">Date must be before now!</string>
    <string name="weight_must_be_between">Weight must be between %1$.1f and %2$.1f kg!</string>
    <string name="height_must_be_between">Height must be between %1$.1f and %2$.1f cm!</string>
    <string name="bad_number_format">Given number has a bad format. It must be a %1$s number!</string>

    <string name="float_point">floating point</string>
    <string name="integer">integer</string>

    <string name="error_occured">Error occured</string>
    <string name="profile_exists">Profile with this name exists!</string>
    <string name="sqlite_error">Database error occured. Try again later.</string>
    <string name="title_activity_main">Belmondo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="profile">Profile</string>
    <string name="history">History</string>

    <string name="double_back_to_exit">Click back twice to exit.</string>
    <string name="speed">Speed</string>
    <string name="distance">Distance</string>
    <string name="calories">Calories</string>
    <string name="chart_title">Chart</string>
    <string name="choose_chart_title">Choose charts</string>
    <string name="heart_rate">Heart rate</string>
    <string name="gps_unavailable">GPS unavailable!</string>
    <string name="gps_has_been_enabled">GPS has been enabled!</string>
    <string name="gps_has_been_disabled">GPS has been disabled!</string>
    <string name="speed_display_km">%1$.1f km/h</string>
    <string name="cancel_button">Cancel</string>
    <string name="choose_speed_unit">Choose speed unit</string>

    <string name="map_title">Training map</string>

    <string name="google_api_key" translatable="false">AIzaSyAzKkhPzSmAWso3Vqi2iTvyeIKMwvMZcq8</string>
    <string name="choose_distance_unit">Choose distance unit</string>
    <string name="register_offline_button_title">Register offline</string>
    <string name="choose_discipline_dialog_title">Choose discipline</string>
    <string name="action_choose_discipline">discipline</string>

    <string name="walking">Walking</string>
    <string name="running">Running</string>
    <string name="cycling">Cycling</string>
    <string name="history_title">History</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="title_activity_result_details">Result Details</string>
    <string name="result_details_card_view_title">Result details</string>
    <string name="result_details_map_title">Map view</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>


    <string name="pref_profile_weight">Weight</string>
    <string name="pref_profile_height">Height</string>
    <string name="pref_profile_male">MALE</string>
    <string name="pref_profile_female">FEMALE</string>
    <string name="pref_profile_sex">Sex</string>
    <string name="pref_profile_birthdate">Birthdate</string>
    <string name="pref_profile_name">Profile name</string>
    <string name="pref_header_profile">Profile</string>
    <string name="pref_header_units">Units</string>
    <string name="pref_units_speed">Speed unit</string>
    <string name="pref_units_distance">Distance unit</string>
    <string name="settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="min_weight">Min value for weight is 20kg</string>
    <string name="max_weight">Max value for weight is 300kg</string>
    <string name="min_height">Min value for height is 20cm</string>
    <string name="max_height">Max value for height is 300cm</string>
    <string name="max_speed">max speed</string>
    <string name="avg_speed">avg speed</string>
    <string name="distance_s">distance</string>
    <string name="calories_s">calories</string>
</resources>
