<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.paciu.belmondo.HistoryActivity">

    <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
        android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar android:id="@+id/history_toolbar"
            android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" app:popupTheme="@style/AppTheme.PopupOverlay"
            android:title="@string/history_title"
            app:title="@string/history_title"/>

    </android.support.design.widget.AppBarLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/history_listview"
                android:paddingBottom="20dp"
                />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                >
                <LinearLayout
                    android:id="@+id/history_row_stats_container"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_margin="2dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/history_row_avgspeed_iv"
                        android:src="@drawable/speedometr_icon"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        />
                    <TextView
                        android:id="@+id/history_row_avgspeed_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/avg_speed"
                        android:textSize="15sp"
                        android:textColor="@color/colorPrimaryDark"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp">
                    <ImageView
                        android:id="@+id/history_row_maxspeed_iv"
                        android:src="@drawable/speed_icon"
                        android:layout_width="20dp"
                        android:layout_height="20dp" />
                    <TextView
                        android:id="@+id/history_row_maxspeed_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/max_speed"
                        android:textSize="15sp"
                        android:textColor="@color/colorPrimaryDark"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp">
                    <ImageView
                        android:id="@+id/history_row_distance_iv"
                        android:src="@drawable/distance_icon"
                        android:layout_width="20dp"
                        android:layout_height="20dp" />
                    <TextView
                        android:id="@+id/history_row_distance_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/distance_s"
                        android:textSize="15sp"
                        android:textColor="@color/colorPrimaryDark"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp">
                    <ImageView
                        android:id="@+id/history_row_calories_iv"
                        android:src="@drawable/calorie_icon"
                        android:layout_width="20dp"
                        android:layout_height="20dp" />
                    <TextView
                        android:id="@+id/history_row_calories_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/calories_s"
                        android:textSize="15sp"
                        android:textColor="@color/colorPrimaryDark"/>
                </LinearLayout>
            </LinearLayout>
            </android.support.v7.widget.CardView>
    </RelativeLayout>
</LinearLayout>
