<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frag_card_coord_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <com.example.paciu.belmondo.ViewsExtends.TimerCardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/timer_card_view_for_stat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="2dp"
            android:layout_margin="4dp">
        </com.example.paciu.belmondo.ViewsExtends.TimerCardView>

        <com.example.paciu.belmondo.ViewsExtends.SpeedCardView

            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            xmlns:custom_card="http://schemas.android.com/apk/res/com.example.paciu.belmondo"
            android:id="@+id/frag_for_stat_card_view_speed_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="2dp"
            android:layout_margin="4dp"

            custom_card:contentText="- km/h"
            custom_card:titleText="@string/speed"
            custom_card:titleIcon="@drawable/speed52_icon">
        </com.example.paciu.belmondo.ViewsExtends.SpeedCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.example.paciu.belmondo.ViewsExtends.DistanceCardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:custom_card="http://schemas.android.com/apk/res/com.example.paciu.belmondo"
                android:id="@+id/distance_card_view"
                android:layout_weight="0.5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="2dp"
                android:layout_margin="4dp"
                custom_card:contentText="- km"
                custom_card:titleText="@string/distance"
                custom_card:titleIcon="@drawable/distance_icon">

            </com.example.paciu.belmondo.ViewsExtends.DistanceCardView>

            <com.example.paciu.belmondo.ViewsExtends.CardViewForDisplayStatFeature

                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:custom_card="http://schemas.android.com/apk/res/com.example.paciu.belmondo"
                android:id="@+id/frag_for_stat_card_view5"
                android:layout_weight="0.5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="2dp"
                android:layout_margin="4dp"
                custom_card:contentText="- kcal"
                custom_card:titleText="@string/calories"
                custom_card:titleIcon="@drawable/calorie_icon">

            </com.example.paciu.belmondo.ViewsExtends.CardViewForDisplayStatFeature>
        </LinearLayout>

        <com.example.paciu.belmondo.ViewsExtends.CardViewForDisplayStatFeature

            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            xmlns:custom_card="http://schemas.android.com/apk/res/com.example.paciu.belmondo"
            android:id="@+id/frag_for_stat_card_view_bottom_chart"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="2dp"
            android:layout_margin="4dp"
            custom_card:contentText=""
            custom_card:titleText="@string/chart_title"
            custom_card:titleIcon="@drawable/combo_chart">

            <LinearLayout
                android:id="@+id/frag_card_place_for_chart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="30dp"
                android:paddingStart="10dp"
                android:paddingRight="10dp"
                >

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/frag_stat_chart"
                    android:layout_width="match_parent"
                    android:layout_height="150dp">

                </com.github.mikephil.charting.charts.LineChart>
            </LinearLayout>

        </com.example.paciu.belmondo.ViewsExtends.CardViewForDisplayStatFeature>



    </LinearLayout>
    <LinearLayout
        android:id="@+id/fabs_timercontrol_layout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal"
        android:gravity="bottom|center"
        android:layout_gravity="bottom"
        >

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/newInterval_fab"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_anchor="@id/fabs_timercontrol_layout"
            app:layout_anchorGravity="bottom"
            android:src="@drawable/restart_icon48"
            android:elevation="10dp"
            app:fabSize="normal"
            app:backgroundTint="@color/colorPrimaryDark"
            android:clickable="true"
            android:layout_gravity="bottom|center">
        </android.support.design.widget.FloatingActionButton>

        <com.example.paciu.belmondo.ViewsExtends.FloatingActionButtonPlayPause
            android:id="@+id/start_pause_fab"
            android:layout_height="120dp"
            android:layout_width="120dp"
            app:layout_anchor="@id/fabs_timercontrol_layout"
            app:layout_anchorGravity="center"
            android:elevation="10dp"
            android:src="@drawable/play_icon50"
            android:scaleType="center"
            app:fabSize="normal"
            app:backgroundTint="@color/colorPrimary"
            android:clickable="true"
            android:layout_gravity="bottom|center"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/stop_fab"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_anchor="@id/fabs_timercontrol_layout"
            app:layout_anchorGravity="bottom"
            android:src="@drawable/stop_icon"
            android:elevation="10dp"
            app:fabSize="normal"
            app:backgroundTint="@color/colorStopButton"
            android:clickable="true"
            android:layout_gravity="bottom|center" />

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>