<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout android:id="@+id/app_bar"
        android:layout_width="match_parent" android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="@drawable/bg_create_profile">

    <android.support.design.widget.CollapsingToolbarLayout android:id="@+id/toolbar_layout"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:fitsSystemWindows="true" app:contentScrim="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|exitUntilCollapsed" app:toolbarId="@+id/toolbar">

        <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
            android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            />


        <android.support.v7.widget.Toolbar android:id="@+id/toolbar2"
            android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:focusableInTouchMode="true">

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="10dp"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="1"
                android:paddingBottom="40dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/fill_form"
                        android:textSize="20sp"
                        android:layout_weight="1"/>
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/editprofile48"
                        android:layout_marginBottom="10dp"
                        android:layout_gravity="bottom|end" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/cardDivider" >

                </View>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="10dp"
                        android:paddingStart="10dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:background="@drawable/callendar58"
                            android:layout_gravity="top"
                            android:layout_marginTop="25dp"
                            android:layout_marginStart="10dp"

                            />

                        <com.example.paciu.belmondo.ViewsExtends.TextInputLayoutWithHideError
                            android:id="@+id/input_layout_profile_pick_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            >

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            android:ems="10"
                            android:id="@+id/date_pick_edit_text"
                            android:backgroundTint="@color/cardDivider"
                            android:layout_gravity="center_horizontal"
                            android:hint="@string/pick_date"
                            android:focusable="false"

                            />
                        </com.example.paciu.belmondo.ViewsExtends.TextInputLayoutWithHideError>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="10dp"
                        android:paddingStart="10dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:background="@drawable/weight52"
                            android:layout_gravity="top"
                            android:layout_marginTop="25dp"
                            android:layout_marginStart="10dp"

                            />
                        <com.example.paciu.belmondo.ViewsExtends.TextInputLayoutWithHideError
                        android:id="@+id/input_layout_profile_weight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"

                        >

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:maxLength="5"
                            android:ems="10"
                            android:id="@+id/weight_edit_text"
                            android:backgroundTint="@color/cardDivider"
                            android:layout_gravity="center_horizontal"
                            android:hint="@string/weight"/>
                    </com.example.paciu.belmondo.ViewsExtends.TextInputLayoutWithHideError>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="10dp"
                        android:paddingStart="10dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:background="@drawable/line52"
                            android:layout_gravity="top"
                            android:layout_marginTop="25dp"
                            android:layout_marginStart="10dp"

                            />

                        <com.example.paciu.belmondo.ViewsExtends.TextInputLayoutWithHideError
                            android:id="@+id/input_layout_profile_height"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginTop="10dp"
                            >
                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:ems="10"
                                android:maxLength="3"
                                android:id="@+id/height_edit_text"
                                android:backgroundTint="@color/cardDivider"
                                android:layout_gravity="center_horizontal"
                                android:hint="@string/height"/>
                        </com.example.paciu.belmondo.ViewsExtends.TextInputLayoutWithHideError>

                    </LinearLayout>

                </LinearLayout>

             </LinearLayout>

        </android.support.v7.widget.CardView>

    </FrameLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/apply_fab"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_anchor="@id/card_view"
        app:layout_anchorGravity="end|bottom"
        android:layout_margin="16dp"
        android:src="@drawable/checkmark_white52"
        android:elevation="6dp"
        app:fabSize="normal"
        app:backgroundTint="@color/colorPrimary"
        android:clickable="true"/>

</android.support.design.widget.CoordinatorLayout>